--- a/src/index.css
+++ b/src/index.css
@@ -22,20 +22,8 @@ body {
   font-size: var(--font-size-md);
 }
 
-h1 {
-  font-size: var(--font-size-xxl);
-}
-
-h2 {
-  font-size: var(--font-size-xl);
-}
-
-h3 {
-  font-size: var(--font-size-lg);
-}
-
-h4,
-h5,
-h6 {
-  font-size: var(--font-size-md);
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
