--- a/src/views/DocumentationPage.module.css
+++ b/src/views/DocumentationPage.module.css
@@ -2,10 +2,20 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  max-width: 900px;
+  width: 100%;
 }
 
 .component-list > section {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  border: 1px solid black;
+  padding: 1rem;
+}
+
+.component-list h2 {
+  font-size: var(--font-size-md);
+  font-weight: var(--font-weight-bold);
+  align-self: center;
 }
