--- a/src/views/DocumentationPage.module.css
+++ b/src/views/DocumentationPage.module.css
@@ -9,13 +9,13 @@
 .component-list > section {
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 1rem;
   border: 1px solid black;
   padding: 1rem;
 }
 
 .component-list h2 {
-  font-size: var(--font-size-md);
+  font-size: var(--font-size-lg);
   font-weight: var(--font-weight-bold);
   align-self: center;
 }
