--- a/src/views/SiteLayout.module.css
+++ b/src/views/SiteLayout.module.css
@@ -18,7 +18,8 @@
 .main {
   flex-grow: 1;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  padding: 1rem;
 }
 
 .footer {
