--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,13 @@
 
   --clr-error: hsl(0, 100%, 45%);
   --clr-neutral-150: hsl(0, 0%, 94%);
+
+  --spacing-xxs: 0.125rem;
+  --spacing-xs: 0.25rem;
+  --spacing-sm: 0.5rem;
+  --spacing-md: 0.75rem;
+  --spacing-lg: 1rem;
+  --spacing-xl: 2rem;
 }
 
 body {
