--- a/src/components/form/FieldWrapper.module.css
+++ b/src/components/form/FieldWrapper.module.css
@@ -2,15 +2,15 @@
   display: flex;
   flex-direction: column;
   align-items: start;
-  gap: 0.5rem;
-  padding: 0.25rem;
+  gap: var(--spacing-sm);
+  padding: var(--spacing-xs);
 }
 
 .field-wrapper input,
 .field-wrapper select {
   border: 2px solid hsl(218, 51%, 37%);
   background-color: white;
-  padding: 0.5rem;
+  padding: var(--spacing-sm);
 }
 
 .field-wrapper {
