--- a/src/components/timer/TimerForm.module.css
+++ b/src/components/timer/TimerForm.module.css
@@ -4,7 +4,7 @@
 }
 
 .form [type="submit"] {
-  margin-top: 2rem;
+  margin-top: var(--spacing-xl);
   align-self: start;
   margin-left: 0.25rem;
 }
