--- a/src/views/DocumentationPage.module.css
+++ b/src/views/DocumentationPage.module.css
@@ -1,15 +1,15 @@
 .component-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: var(--spacing-xl);
 }
 
 .component-list > section {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--spacing-md);
   border: 1px solid black;
-  padding: 1rem;
+  padding: var(--spacing-md);
 }
 
 .component-list h2 {
