--- a/src/views/SiteLayout.module.css
+++ b/src/views/SiteLayout.module.css
@@ -1,7 +1,7 @@
 .navigation > ul {
   display: flex;
   justify-content: center;
-  gap: 1rem;
+  gap: var(--spacing-md);
   list-style: none;
 }
 
@@ -19,7 +19,7 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  padding: 1rem;
+  padding: var(--spacing-md);
 }
 
 .footer {
@@ -27,5 +27,5 @@
 }
 
 .footer p {
-  margin: 1rem;
+  margin: var(--spacing-md);
 }
