--- a/src/components/workout/WorkoutPlan.module.css
+++ b/src/components/workout/WorkoutPlan.module.css
@@ -14,6 +14,10 @@
   padding: var(--spacing-sm) var(--spacing-md);
 }
 
+.workout-plan tr[data-active="true"] > td {
+  background-color: var(--clr-highlight);
+}
+
 .workout-plan table tbody tr:nth-child(even) {
   background-color: var(--clr-neutral-150);
 }
