--- a/src/components/workout/Workout.module.css
+++ b/src/components/workout/Workout.module.css
@@ -2,3 +2,10 @@
   font-size: var(--font-size-lg);
   font-style: italic;
 }
+
+.workout {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: var(--spacing-xl);
+}
