--- a/src/components/workout/WorkoutControls.module.css
+++ b/src/components/workout/WorkoutControls.module.css
@@ -4,15 +4,18 @@
   gap: var(--spacing-md);
 }
 
-.workout-controls__timer,
-.workout-controls__workout {
+.workout-controls > * {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 }
 
-.workout-controls [data-hidden="true"] {
-  visibility: hidden;
+.workout-controls__basic {
+  column-gap: var(--spacing-md);
+}
+
+.workout-controls__resets {
+  column-gap: var(--spacing-lg);
 }
 
 .workout-controls__button--empty {
