--- a/src/components/timer/TimerDisplay.module.css
+++ b/src/components/timer/TimerDisplay.module.css
@@ -1,36 +1,45 @@
-.timer-display {
+.header {
+  background-color: var(--clr-primary-50);
+  align-self: stretch;
+  display: flex;
+  justify-content: center;
+}
+
+.featured {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  row-gap: var(--spacing-lg);
+  flex-grow: 1;
 }
 
-.timer-display__time {
+.time {
   font-size: var(--font-size-xxl);
 }
 
-.timer-display__rounds {
+.rounds {
   font-size: var(--font-size-lg);
   font-variant: small-caps;
 }
 
-.timer-display__type {
+.type {
   font-size: var(--font-size-md);
   font-weight: var(--font-weight-bold);
   font-variant: small-caps;
+  padding: 0.25em 0.5em;
 }
 
-.timer-display__state {
-  font-size: var(--font-size-lg);
+.status {
+  font-size: var(--font-size-xl);
   font-variant: small-caps;
 }
 
-.timer-display__progress {
-  display: flex;
-  flex-direction: column;
-  row-gap: var(--spacing-xxs);
+.progress {
   align-self: stretch;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows: 1fr 1fr;
+  row-gap: var(--spacing-xs);
+  place-items: center;
 }
 
 .subgroup {
@@ -38,4 +47,5 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  row-gap: var(--spacing-xs);
 }
