--- a/src/components/ui/Progress.module.css
+++ b/src/components/ui/Progress.module.css
@@ -2,14 +2,14 @@
   --fg-color: var(--clr-primary-500);
   --bg-color: var(--clr-primary-100);
   --border-color: var(--clr-primary-500);
-  --border-radius: 0.125rem;
+  --border-radius: var(--border-radius-md);
 
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
 
   border: none;
-  border-radius: var(--border-radius-md);
+  border-radius: var(--border-radius);
   background: var(--bg-color);
 
   align-self: stretch;
