--- a/src/index.css
+++ b/src/index.css
@@ -42,12 +42,12 @@
   --spacing-lg: 1rem;
   --spacing-xl: 2rem;
 
-  --border-radius-xs: 0.125rem;
-  --border-radius-sm: 0.25rem;
-  --border-radius-md: 0.5rem;
-  --border-radius-lg: 1rem;
-  --border-radius-xl: 2rem;
-  --border-radius-xxl: 4rem;
+  --border-radius-none: 0;
+  --border-radius-xs: 2px;
+  --border-radius-sm: 4px;
+  --border-radius-md: 8px;
+  --border-radius-lg: 12px;
+  --border-radius-xl: 16px;
 }
 
 body {
