--- a/src/views/HomePage.module.css
+++ b/src/views/HomePage.module.css
@@ -1,6 +1,15 @@
 .home-page {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  row-gap: var(--spacing-xl);
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  gap: var(--spacing-xl);
+}
+
+.overview {
+  display: grid;
+  place-items: end;
+}
+
+.control-column {
+  display: grid;
+  place-items: end start;
 }
