--- a/src/components/workout/WorkoutSummary.module.css
+++ b/src/components/workout/WorkoutSummary.module.css
@@ -1,8 +1,8 @@
 .workout-summary {
   display: flex;
   column-gap: var(--spacing-xl);
-  border-bottom: 2px solid black;
   padding: var(--spacing-sm) var(--spacing-md);
+  border-bottom: 3px solid var(--clr-primary-500);
 }
 
 .workout-summary > :first-child {
