--- a/src/views/HomePage.module.css
+++ b/src/views/HomePage.module.css
@@ -1,4 +1,11 @@
 .home-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: var(--spacing-xl);
+}
+
+.top-row {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   gap: var(--spacing-xl);
