--- a/src/components/workout/WorkoutSummary.module.css
+++ b/src/components/workout/WorkoutSummary.module.css
@@ -1,5 +1,6 @@
 .workout-summary {
   display: flex;
+  flex-wrap: wrap;
   column-gap: var(--spacing-xl);
   padding: var(--spacing-sm) var(--spacing-md);
   border-bottom: 3px solid var(--clr-primary-500);
