--- a/src/index.css
+++ b/src/index.css
@@ -35,11 +35,12 @@
   --clr-primary-600: hsl(257, 49%, 35%);
 
   --clr-accent: hsl(218, 51%, 37%);
+  --clr-accent-300: hsl(218, 61%, 37%);
 
   --clr-highlight: var(--clr-primary-50);
 
-  --clr-link-unvisited: var(--clr-accent);
-  --clr-link-visted: var(--clr-primary-600);
+  --clr-link-unvisited: var(--clr-accent-300);
+  --clr-link-visted: var(--clr-accent-300);
 
   --spacing-xxs: 0.125rem;
   --spacing-xs: 0.25rem;
